@@ -77,8 +77,8 @@
 /* The type of cpu this target has */
 # define C_TARGETCPU X86_64
 /* Define to 1 to use x86 dynamic cpu core */
-# undef C_DYNAMIC_X86
-# define C_DYNREC 1
+# define C_DYNAMIC_X86 1
+# undef C_DYNREC
 #elif defined (_M_ARM64) || defined (_M_ARM) /* Microsoft C++ amd64, arm32 and arm64 */
 # undef C_TARGETCPU
 # undef C_DYNAMIC_X86
