@@ -1,4 +1,9 @@
 0.83.7
+  - Implemented the dynamic X86 core for both 32-bit
+    and 64-bit systems by re-porting the code from SVN.
+    Setting "core=dynamic" will now use the dynamic x86
+    core by default on x86 and x86-64 systems instead
+    of the dynrec core. (Wengier and joncampbell123)
   - Save state feature now allows users to optionally
     enter remarks when saving a state. A toggle menu
     item "No remark when saving state" (in "Capture")
